<resources>
    <string name="app_name">Garbage Anywhere</string>
    <string name="garbage_anywhere">Garbage Anywhere merupakan aplikasi yang berfungsi sebagai tempat atau wadah untuk mengecek barang bekas yang anda miliki layak dijual atau tidak</string>
    <string name="nama_barang">Nama Barang : </string>
    <string name="jumlah_barang">Jumlah Barang : </string>
    <string name="berat_barang">Berat Barang (kg) : </string>
    <string name="jenis_barang">Jenis Barang : </string>
    <string name="besi">Besi</string>
    <string name="plastik">Plastik</string>
    <string name="kertas">Kertas</string>
    <string name="submit">Submit</string>
    <string name="nilai_layak">Nilai Kelayakan : %1$.2f</string>
    <string name="layak_jual">Layak Jual</string>
    <string name="tidak_layak">Tidak Layak Jual</string>
    <string name="negosiasi">Negosiasi</string>
    <string name="kategori">Kategori : %1$s</string>
    <string name="nama_barang_error">Isi nama terlebih dahulu</string>
    <string name="berat_error">Isi berat terlebih dahulu</string>
    <string name="jumlah_error">Isi jumlah terlebih dahulu</string>
    <string name="kategori_error">Pilih kategori terlebih dahulu</string>
    <string name="judul_layak">Mendapat Nilai Layak Jual</string>
    <string name="judul_tidak_layak">Mendapat Nilai Tidak Layak</string>
    <string name="judul_nego">Mendapat Nilai Negosiasi</string>
    <string name="layak_hasil">Barang yang kamu timbang sangat layak untuk dijual, kamu akan mendapatkan keuntungan yang besar</string>
    <string name="tidak_layak_hasil">Barang yang kamu timbang tidak cukup layak untuk dijual, lain waktu perbanyak barang yang dibawa ya</string>
    <string name="nego_hasil">Barang yang kamu timbang masih layak mendapatkan kesempatan negosiasi untuk mendapatkan uang</string>
    <string name="lihatsaran">Lihat Saran</string>
    <string name="copyright">Garbage Anywhere merupakan aplikasi android khusus untuk menghitung barang yang ingin diketahui layak dijual atau tidak</string>
    <string name="belum_ada_data">Data Kosong</string>
    <string name="history">History</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="bagikan">Share</string>
    <string name="bagikan_template">Berat: %1$s kg \n Jumlah: %2$s \n Jenis: %3$s\n\n%4$s\n%5$s</string>
    <string name="nilai_x">NILAI : %1$.2f</string>
    <string name="hasil_x">Hasil: %1$.2f - %2$s</string>
    <string name="kategori_x">Kategori: %1$s</string>
    <string name="data_x">Berat: %1$.1f - Jumlah: %2$.1f - %3$s</string>
    <string name="confirm_delete">Hapus semua history? </string>
    <string name="batal">Batal</string>
    <string name="koneksi_error"></string>
    <string name="update_channel">Update</string>
    <string name="update_desc">Update data history</string>
    <string name="notif_title">Data baru telah terdaftar!</string>
    <string name="notif_text">Cek sekarang juga</string>
</resources>